# lidar_slam_evaluator

./: .gitmodules  README.md  compare.py  gt2bag.py  kitti2bag.py
PathRecorder/: .gitignore  CMakeLists.txt  README.md  package.xml  record.cc
PathRecorder/config/: lio_kitti_params.yaml
PathRecorder/include/: utility.h
PathRecorder/launch/: play_all.launch  play_aloam.launch  play_gt.launch  play_lego_loam.launch  play_lio_sam.launch  record_aloam.launch  record_lego_loam.launch  record_lio_sam.launch
PathRecorder/rviz_cfg/: play_all.rviz  play_aloam.rviz  play_gt.rviz  play_lego_loam.rviz  play_lio_sam.rviz
PathRecorder/src/: path_recorder.cc  path_recorder.h
src/: error.py  quaternion.py  trajectory.py
